# mailbox.resource

./: CMakeLists.txt  ldscript.lds
sfd/: mailbox_lib.sfd
src/: getclockrate.c  getclockstate.c  getgpiostate.c  getpowerstate.c  init.c  mailbox.h  main.c  mbox.c  rawcommand.c  setclockrate.c  setclockstate.c  setgpiostate.c  setpowerstate.c  stringcommand.c
